feadt: updated filter- and search-ui

--- a/src/main/resources/META-INF/resources/filters.html
+++ b/src/main/resources/META-INF/resources/filters.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Filtern</title>
-    <!--<link rel="stylesheet" type="text/css" href="/css/unpoly.css" >
-    <script type="text/javascript" src="/js/unpoly.js" defer></script>-->
 </head>
 <body>
 <main>
     <div class="overlay">
-        <span class="filter-text">Filtern nach</span>
+        <span class="title">Filtern nach</span>
         <div class="button-container">
             <form action="/mobile/events" method="GET">
                 <span class="filter-section">Zeitraum</span>
