--- a/src/main/resources/META-INF/resources/search.html
+++ b/src/main/resources/META-INF/resources/search.html
@@ -6,9 +6,8 @@
 </head>
 <body>
 <main>
-    <div id="searchOverlay">
         <div class="overlay">
-            <span class="search-section">Suchen nach</span>
+            <span class="title">Suchen nach</span>
             <div class="button-container">
                 <form action="/mobile/events" method="GET">
                     <input class="search-input" type="text" placeholder="Suchbegriff eingeben" name="filter[name]">
@@ -16,7 +15,6 @@
                 </form>
             </div>
         </div>
-    </div>
 </main>
 
 </body>
