--- a/src/main/resources/META-INF/resources/search.html
+++ b/src/main/resources/META-INF/resources/search.html
@@ -10,7 +10,7 @@
             <span class="title">Suchen nach</span>
             <div class="button-container">
                 <form action="/mobile/events" method="GET">
-                    <input class="search-input" type="text" placeholder="Suchbegriff eingeben" name="filter[name]">
+                    <input type="text" placeholder="Suchbegriff eingeben" name="filter[name]">
                     <button class="confirm-button" type="submit">Bestätigen</button>
                 </form>
             </div>
